--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             </nav>
             <!-- Image with text over grid -->
             <div class="imageCowGrid">
-                <img src="cow.jpg" class="cowImg"/>
+                <img src="coww.jpg" class="cowImg"/>
                 <div class="textToOverlay">
-                    <h1>Your finest local Yorkshire produce</h1>
+                    <h1>Fucking done it</h1>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam obcaecati quas veniam amet at quia tempora fuga dicta quae similique vel quaerat beatae, voluptatibus rerum eum. Fuga qui nam blanditiis.</p>
                 </div>
             </div>
