--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </nav>
             <!-- Image with text over grid -->
             <div class="imageCowGrid">
-                <img src="coww.jpg" class="cowImg"/>
+                <img src="co.jpg" class="cowImg"/>
                 <div class="textToOverlay">
                     <h1>Fucking done it</h1>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam obcaecati quas veniam amet at quia tempora fuga dicta quae similique vel quaerat beatae, voluptatibus rerum eum. Fuga qui nam blanditiis.</p>
