--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <main class="container">
             <!-- Image with text over grid -->
             <div class="mainGrid">
-                <img src="cow.jpg" class="cowImg"/>
+                <img src="coww.jpg" class="cowImg"/>
                 <div class="textToOverlay">
                     <h1>Your finest local Yorkshire produce</h1>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam obcaecati quas veniam amet at quia tempora fuga dicta quae similique vel quaerat beatae, voluptatibus rerum eum. Fuga qui nam blanditiis.</p>
