--- a/index.html
+++ b/index.html
@@ -34,12 +34,36 @@
                 </div>
                 <!-- Introduction with three cards -->
                 <div class="intro">
-                    <div class=textIntro>
+                    <div class="textIntro">
                         <h2>Introduction</h2>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, reprehenderit id suscipit vitae minima quisquam neque sequi tenetur facilis dignissimos totam, numquam repellat maxime esse amet officiis perspiciatis natus modi.</p>
                     </div>
                 </div>
-            </div>    
+                <div class="infoCard">
+                    <div class="iconBackground">
+                        <img src="Milk_Outline.svg" class="milkImg" height="40px" width="40px">
+                    </div>
+                    <h3>Raw milk</h3>
+                    <div class="underline"></div>
+                    <p>Some short and snappy copy here explaining the amazing milk which the farm sells on a daily basis.</p>
+                </div>
+                <div class="infoCard1">
+                    <div class="iconBackground">
+                        <img src="Egg_Outline.svg" class="milkImg" height="40px" width="40px">
+                    </div>
+                    <h3>Free range eggs</h3>
+                    <div class="underline"></div>
+                    <p>Some short and snappy copy here explaining the amazing eggs which the farm sells on a daily basis.</p>
+                </div>
+                <div class="infoCard2">
+                    <div class="iconBackground">
+                        <img src="Honey_Outline.svg" class="milkImg" height="40px" width="40px">
+                    </div>
+                    <h3>Raw honey</h3>
+                    <div class="underline"></div>
+                    <p>Some short and snappy copy here explaining the amazing milk which the farm sells on a daily basis.</p>    
+                </div>
+            </div>
         </main>
     </body>
 </html>
