--- a/index.html
+++ b/index.html
@@ -77,7 +77,37 @@
                     </div>
                     <img src="Chicken.jpg" class="textImgSide2">
                 </div>
+                <div class="imgTextContainer1">
+                    <div class="textButton3">
+                        <h1>“</h1>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae maiores similique vitae eius animi praesentium optio tempora amet quos minima maxime atque consequatur, ab dicta, nulla at, cumque debitis exercitationem!</p>
+                        <h4>Iesha Paul</h4><h4 class="customerSat">Satisfied customer</h4>
+                    </div>
+                    <img src="Wanker.jpg" class="textImgSide3">
             </div>
         </main>
+        <footer class="footerBar">
+             <!-- Class for main title -->
+             <div class="footer-title">
+                <h3>Red Lodge Farm</h3>
+            </div>
+            <!-- Class for navigation buttons -->
+            <div class="footerButtons">
+                <a class="footerAnchor"><h3>Home</h3></a>
+                <a class="footerAnchor"><h3>Products</h3></a>
+                <a class="footerAnchor"><h3>Prices</h3></a>
+                <a class="footerAnchor"><h3>Delivery</h3></a>
+                <a class="footerAnchor"><h3>Abous us</h3></a>
+            </div>
+            <div class="lodgeRights"> 
+                <h4> © 2020 Red Lodge Farm. All rights reserved </h4>
+            </div>
+            <h4 class="socialText">Find us on social media</h4>
+            <div class="social"> 
+                <img src="Twitter.svg">
+                <img src="Insta.svg">
+                <img src="Facebook.svg">
+            </div>
+        </footer>
     </body>
 </html>
