--- a/index.html
+++ b/index.html
@@ -16,13 +16,20 @@
                 <h1>Red Lodge Farm</h1>
             </div>
             <!-- Class for navigation buttons -->
-            <div class="navButtons">
-                <a class="navAnchor"><h1>Home</h1></a>
-                <a class="navAnchor"><h1>Products</h1></a>
-                <a class="navAnchor"><h1>Prices</h1></a>
-                <a class="navAnchor"><h1>Delivery</h1></a>
-                <a class="navAnchor"><h1>Abous us</h1></a>
-            </div>
+            <button class="dropbtn">
+                <div class="burger"></div>
+                <div class="burger"></div>
+                <div class="burger"></div>
+            </button>
+            <div class="dropdown navButtons">
+                <div class="navButtons dropdown-content">
+                    <a class="navAnchor"><h1>Home</h1></a>
+                    <a class="navAnchor"><h1>Products</h1></a>
+                    <a class="navAnchor"><h1>Prices</h1></a>
+                    <a class="navAnchor"><h1>Delivery</h1></a>
+                    <a class="navAnchor"><h1>Abous us</h1></a>
+                </div>
+            </div>    
         </nav>
         <main class="container">
             <!-- Image with text over grid -->
