--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
                 <h1>Red Lodge Farm</h1>
             </div>
             <!-- Class for navigation buttons -->
-            <button class="dropbtn">
-                <div class="burger"></div>
-                <div class="burger"></div>
-                <div class="burger"></div>
-            </button>
             <div class="dropdown navButtons">
+                <script src="script.js"></script>
+                <button onclick="myFunction()" class="dropbtn">  
+                    <div class="burger"></div>
+                    <div class="burger"></div>
+                    <div class="burger"></div></button>
                 <div class="navButtons dropdown-content">
                     <a class="navAnchor"><h1>Home</h1></a>
                     <a class="navAnchor"><h1>Products</h1></a>
