--- a/index.html
+++ b/index.html
@@ -40,20 +40,22 @@
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam obcaecati quas veniam amet at quia tempora fuga dicta quae similique vel quaerat beatae, voluptatibus rerum eum. Fuga qui nam blanditiis.</p>
                 </div>
                 <!-- Introduction with three cards -->
-                <div class="intro">
+                <!-- <div class="intro">
                     <div class="textIntro">
                         <h2>Introduction</h2>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, reprehenderit id suscipit vitae minima quisquam neque sequi tenetur facilis dignissimos totam, numquam repellat maxime esse amet officiis perspiciatis natus modi.</p>
                     </div>
-                </div>
-                <div class="infoCard">
+                </div> -->
+                <!-- <div class="infoCard">
                     <div class="iconBackground">
                         <img src="Milk_Outline.svg" class="milkImg" height="40px" width="40px">
                     </div>
                     <h3>Raw milk</h3>
                     <div class="underline"></div>
                     <p>Some short and snappy copy here explaining the amazing milk which the farm sells on a daily basis.</p>
-                </div>
+                </div> -->
+            </main>
+<!--              
                 <div class="infoCard1">
                     <div class="iconBackground">
                         <img src="Egg_Outline.svg" class="milkImg" height="40px" width="40px">
@@ -92,13 +94,13 @@
                     </div>
                     <img src="Wanker.jpg" class="textImgSide3">
             </div>
-        </main>
-        <footer class="footerBar">
-             <!-- Class for main title -->
+        </main> -->
+        <!-- <footer class="footerBar">
+             
              <div class="footer-title">
                 <h3>Red Lodge Farm</h3>
             </div>
-            <!-- Class for navigation buttons -->
+         
             <div class="footerButtons">
                 <a class="footerAnchor"><h3>Home</h3></a>
                 <a class="footerAnchor"><h3>Products</h3></a>
@@ -115,6 +117,6 @@
                 <img src="Insta.svg">
                 <img src="Facebook.svg">
             </div>
-        </footer>
+        </footer> -->
     </body>
 </html>
