--- a/index.html
+++ b/index.html
@@ -34,29 +34,27 @@
         <main class="container">
             <!-- Image with text over grid -->
             <div class="mainGrid">
-                <img src="coww.jpg" class="cowImg"/>
+                <img src="coww.jpg" class="cowImg">
                 <div class="textToOverlay">
                     <h1>Your finest local Yorkshire produce</h1>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam obcaecati quas veniam amet at quia tempora fuga dicta quae similique vel quaerat beatae, voluptatibus rerum eum. Fuga qui nam blanditiis.</p>
                 </div>
-                <!-- Introduction with three cards -->
-                <!-- <div class="intro">
+           
+               <div class="intro">
                     <div class="textIntro">
                         <h2>Introduction</h2>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, reprehenderit id suscipit vitae minima quisquam neque sequi tenetur facilis dignissimos totam, numquam repellat maxime esse amet officiis perspiciatis natus modi.</p>
                     </div>
-                </div> -->
-                <!-- <div class="infoCard">
+                </div> 
+                 <div class="infoCard">
                     <div class="iconBackground">
                         <img src="Milk_Outline.svg" class="milkImg" height="40px" width="40px">
                     </div>
                     <h3>Raw milk</h3>
                     <div class="underline"></div>
                     <p>Some short and snappy copy here explaining the amazing milk which the farm sells on a daily basis.</p>
-                </div> -->
-            </main>
-<!--              
-                <div class="infoCard1">
+                </div>
+       <div class="infoCard1">
                     <div class="iconBackground">
                         <img src="Egg_Outline.svg" class="milkImg" height="40px" width="40px">
                     </div>
@@ -94,7 +92,8 @@
                     </div>
                     <img src="Wanker.jpg" class="textImgSide3">
             </div>
-        </main> -->
+            </div>
+        </main> 
         <!-- <footer class="footerBar">
              
              <div class="footer-title">
