--- a/index.html
+++ b/index.html
@@ -34,12 +34,13 @@
         <main class="container">
             <!-- Image with text over grid -->
             <div class="mainGrid">
-                <img src="coww.jpg" class="cowImg">
+                <div class="cowImg">
+                    <img src="coww.jpg" height="100%" width="100%">
+                </div>
                 <div class="textToOverlay">
                     <h1>Your finest local Yorkshire produce</h1>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam obcaecati quas veniam amet at quia tempora fuga dicta quae similique vel quaerat beatae, voluptatibus rerum eum. Fuga qui nam blanditiis.</p>
                 </div>
-           
                <div class="intro">
                     <div class="textIntro">
                         <h2>Introduction</h2>
@@ -94,7 +95,7 @@
             </div>
             </div>
         </main> 
-        <!-- <footer class="footerBar">
+       <footer class="footerBar">
              
              <div class="footer-title">
                 <h3>Red Lodge Farm</h3>
@@ -107,15 +108,15 @@
                 <a class="footerAnchor"><h3>Delivery</h3></a>
                 <a class="footerAnchor"><h3>Abous us</h3></a>
             </div>
-            <div class="lodgeRights"> 
-                <h4> © 2020 Red Lodge Farm. All rights reserved </h4>
-            </div>
             <h4 class="socialText">Find us on social media</h4>
             <div class="social"> 
                 <img src="Twitter.svg">
                 <img src="Insta.svg">
                 <img src="Facebook.svg">
             </div>
-        </footer> -->
+            <div class="lodgeRights"> 
+                <h4> © 2020 Red Lodge Farm. All rights reserved </h4>
+            </div>
+        </footer> 
     </body>
 </html>
