--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <nav role="navigation" id='navBar'>
-            <div class="title">
+            <div id="title">
                 <h1 id='RedLodgeTitle'>Red Lodge Farm</h1>
             </div>
             <div id='navItems' class='navItems'>
