--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
             </div>
             <div id='navItems' class='navItems'>
                 <div id='burgerIcon'>
-                    <div class="firstBurger"></div>
-                    <div class="secondBurger"></div>
-                    <div class="thirdBurger"></div>
+                    <div id="firstBurger"  class="burgerButtons"></div>
+                    <div id="secondBurger" class="burgerButtons"></div>
+                    <div id="thirdBurger"  class="burgerButtons"></div>
                 </div>
-                <ul id='navMenu'>
-                    <a href='#' id='home'><li>Home</li></a>
-                    <a href='#' id='products'><li>Home</li></a>
-                    <a href='#' id="prices"><li>Home</li></a>
-                    <a href='#' id='delivery'><li>Home</li></a>
-                    <a href='#' id='aboutUs'></a><li>Home</li></a>
-                </ul>
+                <div id='navMenu'>
+                    <a href='#' id='home'>Home</a>
+                    <a href='#' id='products'>Products</a>
+                    <a href='#' id="prices">Prices</a>
+                    <a href='#' id='delivery'>Delivery</a>
+                    <a href='#' id='aboutUs'>aboutUs</a>
+                </div>
             </div>
         </nav>
     <script src="script.js"></script>
