--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
                 </div>
             </div>
         </nav>
+        <main id='main'>
+            
+        </main>
     <script src="script.js"></script>
+    <script src="jquery-3.5.1.js"></script>
     </body>
 </html>
