--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
             </div>
         </nav>
         <main id='main'>
-            
+            <div class='introduction'>
+                <div id='cowImg'>
+                    <img src="coww.jpg">
+                </div>
+            </div>
+
         </main>
     <script src="script.js"></script>
     <script src="jquery-3.5.1.js"></script>
