--- a/index.html
+++ b/index.html
@@ -25,12 +25,46 @@
             </div>
         </nav>
         <main id='main'>
-            <div class='introduction'>
+            <div class='cowImg'>
                 <div id='cowImg'>
                     <img src="coww.jpg">
                 </div>
             </div>
-
+            <div id='introduction'>
+                <div id='introText'>
+                    <h3>Introduction</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda voluptate incidunt maxime dicta, veniam placeat consectetur necessitatibus. Unde numquam earum, fugiat itaque optio nisi impedit consequuntur ipsa cum esse eum!</p>
+                </div>
+                <div class='infoCard' id='milk'>
+                    <div class="cardImgBg">
+                        <img src="Milk_Outline.svg" height=100px width=100px id='milkImg' class='infoCardImg'>
+                    </div>
+                    <h3>Raw Milk</h3>
+                    <div class='underLine'></div>
+                    <p>Some short and snappy copy here explaining the amazing milk which the farm sells on a daily basis.</p>
+                </div>
+                <div class='infoCard' id='honey'>
+                    <div class="cardImgBg">
+                        <img src="Honey_Outline.svg" height=100px width=100px id='honeyImg' class='infoCardImg'>
+                    </div>
+                    <h3>Raw Honey</h3>
+                    <div class='underLine'></div>
+                    <p>Some short and snappy copy here explaining the amazing milk which the farm sells on a daily basis.</p>
+                </div>
+                <div class='infoCard' id='egg'>
+                    <div class="cardImgBg">
+                        <img src="Egg_Outline.svg" height=100px width=100px id='eggImg' class='infoCardImg'>
+                    </div>
+                    <h3>Raw Egg</h3>
+                    <div class='underLine'></div>
+                    <p>Some short and snappy copy here explaining the amazing milk which the farm sells on a daily basis.</p>
+                </div>
+            </div>
+            <div id='moreInfo'>
+                <div id=infoImg>
+                    <img src="farm.jpg" height=600px width=880px>
+                </div>
+            </div>
         </main>
     <script src="script.js"></script>
     <script src="jquery-3.5.1.js"></script>
