--- a/index.html
+++ b/index.html
@@ -60,12 +60,56 @@
                     <p>Some short and snappy copy here explaining the amazing milk which the farm sells on a daily basis.</p>
                 </div>
             </div>
-            <div id='moreInfo'>
-                <div id=infoImg>
-                    <img src="farm.jpg" height=600px width=880px>
+            <div id=infoSection> 
+                <div id='moreInfo1'>
+                    <div class=infoImg>
+                        <img src="farm.jpg" height=600px width=880px>
+                    </div>
+                    <div class=infoText>
+                        <h2>H2 title would sit here</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem praesentium suscipit quisquam odit libero doloribus impedit placeat, dolorum, tempora et cumque autem? Ut deserunt est, aperiam iusto ea amet accusantium?</p>
+                    </div>
+                    <div class='infoButton'>
+                        <button>Find out more</button>
+                    </div>
+                </div>
+                <div id='moreInfo2'>
+                    <div class=infoImg>
+                        <img src="Chicken.jpg" height=600px width=880px>
+                    </div>
+                    <div class=infoText>
+                        <h2>H2 title would sit here</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem praesentium suscipit quisquam odit libero doloribus impedit placeat, dolorum, tempora et cumque autem? Ut deserunt est, aperiam iusto ea amet accusantium?</p>
+                    </div>
+                    <div class='infoButton'>
+                        <button>Find out more</button>
+                    </div>
+                </div>
+                <div id="review">
+                    <h2>❝</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id aut accusamus vitae incidunt temporibus commodi soluta officia. Deleniti quae a saepe expedita impedit facere. Dicta assumenda dolores fuga vero adipisci.</p>
+                    <p>Thomas Briggs</p>
+                    <p>Satified Customer</p>
                 </div>
             </div>
         </main>
+        <footer>
+            <div class="footerC">
+                <h3>Red Lodge Farm</h3>
+                <h3>Home</h3>
+                <h3>Products</h3>
+                <h3>Delivery</h3>
+                <h3>About Us</h3>
+                <h4>Find us on social media</h4>
+                <div id="socialIcons">
+                    <img src="Twitter.svg">
+                    <img src="Insta.svg">
+                    <img src="Facebook.svg">
+                </div>
+                <h4>© 2020 Red Lodge Farm. All rights reserved</h4>
+            </div>
+
+        </footer>
     <script src="script.js"></script>
     <script src="jquery-3.5.1.js"></script>
     </body>
