--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <title>Red Lodge Farm</title>
         <link href="style.css" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     </head>
     <body>
         <nav role="navigation" id='navBar'>
@@ -88,14 +92,14 @@
                 <div id="review">
                     <h2>❝</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id aut accusamus vitae incidunt temporibus commodi soluta officia. Deleniti quae a saepe expedita impedit facere. Dicta assumenda dolores fuga vero adipisci.</p>
-                    <p>Thomas Briggs</p>
-                    <p>Satified Customer</p>
+                    <p class='nameReview'>Thomas Briggs</p>
+                    <p class='customerReview'>Satified Customer</p>
                 </div>
             </div>
         </main>
         <footer>
             <div class="footerC">
-                <h3>Red Lodge Farm</h3>
+                <h3 id="footerTitle">Red Lodge Farm</h3>
                 <h3>Home</h3>
                 <h3>Products</h3>
                 <h3>Delivery</h3>
