--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
                     <div id="secondBurger" class="burgerButtons"></div>
                     <div id="thirdBurger"  class="burgerButtons"></div>
                 </div>
-                <div id='navMenu'>
-                    <a href='#' id='home'>Home</a>
-                    <a href='#' id='products'>Products</a>
-                    <a href='#' id="prices">Prices</a>
-                    <a href='#' id='delivery'>Delivery</a>
-                    <a href='#' id='aboutUs'>aboutUs</a>
-                </div>
+            </div>
+            <div id='navMenu'>
+                <a href='#' class='navigationItems' id='home'>Home</a>
+                <a href='#' class='navigationItems' id='products'>Products</a>
+                <a href='#' class='navigationItems' id="prices">Prices</a>
+                <a href='#' class='navigationItems' id='delivery'>Delivery</a>
+                <a href='#' class='navigationItems' id='aboutUs'>About Us</a>
             </div>
         </nav>
         <main id='main'>
