--- a/index.html
+++ b/index.html
@@ -28,11 +28,16 @@
                 <a href='#' class='navigationItems' id='aboutUs'>About Us</a>
             </div>
         </nav>
+        <div class="bluebgg"></div>
         <main id='main'>
             <div class='cowImg'>
                 <div id='cowImg'>
                     <img src="coww.jpg">
                 </div>
+            </div>
+           <div id='imgText'>
+            <h2>Your finest Local <br>Yorkshire Produce</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, recusandae reprehenderit ea assumenda perspiciatis nostrum harum officia ut possimus. Necessitatibus, expedita. Eos aperiam perspiciatis fugit amet, doloremque itaque vitae quaerat.</p>
             </div>
             <div id='introduction'>
                 <div id='introText'>
