Finished for testing

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <title>Red Lodge Farm</title>
         <link href="style.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -54,7 +55,7 @@
                 </div>
                 <div class='infoCard' id='honey'>
                     <div class="cardImgBg">
-                        <img src="Honey_Outline.svg" height=100px width=100px id='honeyImg' class='infoCardImg'>
+                        <img src="Honey_Outline.svg" height=60px width=60px id='honeyImg' class='infoCardImg'>
                     </div>
                     <h3>Raw Honey</h3>
                     <div class='underLine'></div>
@@ -62,19 +63,19 @@
                 </div>
                 <div class='infoCard' id='egg'>
                     <div class="cardImgBg">
-                        <img src="Egg_Outline.svg" height=100px width=100px id='eggImg' class='infoCardImg'>
+                        <img src="Egg_Outline.svg" height=60px width=60px id='eggImg' class='infoCardImg'>
                     </div>
                     <h3>Raw Egg</h3>
                     <div class='underLine'></div>
                     <p>Some short and snappy copy here explaining the amazing milk which the farm sells on a daily basis.</p>
                 </div>
             </div>
-            <div id=infoSection> 
+            <div id='infoSection'> 
                 <div id='moreInfo1'>
-                    <div class=infoImg>
+                    <div class='infoImg'>
                         <img src="farm.jpg" height=600px width=880px>
                     </div>
-                    <div class=infoText>
+                    <div class='infoText'>
                         <h2>H2 title would sit here</h2>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem praesentium suscipit quisquam odit libero doloribus impedit placeat, dolorum, tempora et cumque autem? Ut deserunt est, aperiam iusto ea amet accusantium?</p>
                     </div>
@@ -83,10 +84,10 @@
                     </div>
                 </div>
                 <div id='moreInfo2'>
-                    <div class=infoImg>
+                    <div class='infoImg'>
                         <img src="Chicken.jpg" height=600px width=880px>
                     </div>
-                    <div class=infoText>
+                    <div class='infoText'>
                         <h2>H2 title would sit here</h2>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem praesentium suscipit quisquam odit libero doloribus impedit placeat, dolorum, tempora et cumque autem? Ut deserunt est, aperiam iusto ea amet accusantium?</p>
                     </div>
@@ -95,27 +96,38 @@
                     </div>
                 </div>
                 <div id="review">
-                    <h2>❝</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id aut accusamus vitae incidunt temporibus commodi soluta officia. Deleniti quae a saepe expedita impedit facere. Dicta assumenda dolores fuga vero adipisci.</p>
-                    <p class='nameReview'>Thomas Briggs</p>
-                    <p class='customerReview'>Satified Customer</p>
+                    <img class='reviewImg' src="Wanker.jpg">
+                    <div class="reviewText">
+                        <h2>❝</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id aut accusamus vitae incidunt temporibus commodi soluta officia. Deleniti quae a saepe expedita impedit facere. Dicta assumenda dolores fuga vero adipisci.</p>
+                        <p class='nameReview'>Thomas Briggs</p>
+                        <p class='customerReview'>Satified Customer</p>
+                    </div>
                 </div>
             </div>
         </main>
         <footer>
             <div class="footerC">
-                <h3 id="footerTitle">Red Lodge Farm</h3>
-                <h3>Home</h3>
-                <h3>Products</h3>
-                <h3>Delivery</h3>
-                <h3>About Us</h3>
-                <h4>Find us on social media</h4>
-                <div id="socialIcons">
-                    <img src="Twitter.svg">
-                    <img src="Insta.svg">
-                    <img src="Facebook.svg">
+                <div class="ftitle">
+                    <h3 id="footerTitle">Red Lodge Farm</h3>
                 </div>
-                <h4>© 2020 Red Lodge Farm. All rights reserved</h4>
+                <div class='footerNav'>
+                    <h3>Home</h3>
+                    <h3>Products</h3>
+                    <h3>Delivery</h3>
+                    <h3>About Us</h3>
+                </div>
+                <div class="social">
+                <h4>Find us on social media</h4>
+                    <div id="socialIcons">
+                        <img src="Twitter.svg">
+                        <img src="Insta.svg">
+                        <img src="Facebook.svg">
+                    </div>
+                </div>
+                <div class="copyright">
+                    <h4>© 2020 Red Lodge Farm. All rights reserved</h4>
+                </div>  
             </div>
 
         </footer>
