--- a/index.html
+++ b/index.html
@@ -1,137 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Red Lodge Farm</title>
-        <link href="style.css" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700&display=swap" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <nav role="navigation" id='navBar'>
-            <div id="title">
-                <h1 id='RedLodgeTitle'>Red Lodge Farm</h1>
-            </div>
-            <div id='navItems' class='navItems'>
-                <div id='burgerIcon'>
-                    <div id="firstBurger"  class="burgerButtons"></div>
-                    <div id="secondBurger" class="burgerButtons"></div>
-                    <div id="thirdBurger"  class="burgerButtons"></div>
-                </div>
-            </div>
-            <div id='navMenu'>
-                <a href='#' class='navigationItems' id='home'>Home</a>
-                <a href='#' class='navigationItems' id='products'>Products</a>
-                <a href='#' class='navigationItems' id="prices">Prices</a>
-                <a href='#' class='navigationItems' id='delivery'>Delivery</a>
-                <a href='#' class='navigationItems' id='aboutUs'>About Us</a>
-            </div>
-        </nav>
-        <div class="bluebgg"></div>
-        <main id='main'>
-            <div class='cowImg'>
-                <div id='cowImg'>
-                    <img src="coww.jpg">
-                </div>
-            </div>
-           <div id='imgText'>
-            <h2>Your finest Local <br>Yorkshire Produce</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, recusandae reprehenderit ea assumenda perspiciatis nostrum harum officia ut possimus. Necessitatibus, expedita. Eos aperiam perspiciatis fugit amet, doloremque itaque vitae quaerat.</p>
-            </div>
-            <div id='introduction'>
-                <div id='introText'>
-                    <h3>Introduction</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda voluptate incidunt maxime dicta, veniam placeat consectetur necessitatibus. Unde numquam earum, fugiat itaque optio nisi impedit consequuntur ipsa cum esse eum!</p>
-                </div>
-                <div class='infoCard' id='milk'>
-                    <div class="cardImgBg">
-                        <img src="Milk_Outline.svg" height=60px width=60px id='milkImg' class='infoCardImg'>
-                    </div>
-                    <h3>Raw Milk</h3>
-                    <div class='underLine'></div>
-                    <p>Some short and snappy copy here explaining the amazing milk which the farm sells on a daily basis.</p>
-                </div>
-                <div class='infoCard' id='honey'>
-                    <div class="cardImgBg">
-                        <img src="Honey_Outline.svg" height=60px width=60px id='honeyImg' class='infoCardImg'>
-                    </div>
-                    <h3>Raw Honey</h3>
-                    <div class='underLine'></div>
-                    <p>Some short and snappy copy here explaining the amazing milk which the farm sells on a daily basis.</p>
-                </div>
-                <div class='infoCard' id='egg'>
-                    <div class="cardImgBg">
-                        <img src="Egg_Outline.svg" height=60px width=60px id='eggImg' class='infoCardImg'>
-                    </div>
-                    <h3>Raw Egg</h3>
-                    <div class='underLine'></div>
-                    <p>Some short and snappy copy here explaining the amazing milk which the farm sells on a daily basis.</p>
-                </div>
-            </div>
-            <div id='infoSection'> 
-                <div id='moreInfo1'>
-                    <div class='infoImg'>
-                        <img src="farm.jpg" height=600px width=880px>
-                    </div>
-                    <div class='infoText'>
-                        <h2>H2 title would sit here</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem praesentium suscipit quisquam odit libero doloribus impedit placeat, dolorum, tempora et cumque autem? Ut deserunt est, aperiam iusto ea amet accusantium?</p>
-                    </div>
-                    <div class='infoButton'>
-                        <button>Find out more</button>
-                    </div>
-                </div>
-                <div id='moreInfo2'>
-                    <div class='infoImg'>
-                        <img src="Chicken.jpg" height=600px width=880px>
-                    </div>
-                    <div class='infoText'>
-                        <h2>H2 title would sit here</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem praesentium suscipit quisquam odit libero doloribus impedit placeat, dolorum, tempora et cumque autem? Ut deserunt est, aperiam iusto ea amet accusantium?</p>
-                    </div>
-                    <div class='infoButton'>
-                        <button>Find out more</button>
-                    </div>
-                </div>
-                <div id="review">
-                    <img class='reviewImg' src="Wanker.jpg">
-                    <div class="reviewText">
-                        <h2>❝</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id aut accusamus vitae incidunt temporibus commodi soluta officia. Deleniti quae a saepe expedita impedit facere. Dicta assumenda dolores fuga vero adipisci.</p>
-                        <p class='nameReview'>Thomas Briggs</p>
-                        <p class='customerReview'>Satified Customer</p>
-                    </div>
-                </div>
-            </div>
-        </main>
-        <footer>
-            <div class="footerC">
-                <div class="ftitle">
-                    <h3 id="footerTitle">Red Lodge Farm</h3>
-                </div>
-                <div class='footerNav'>
-                    <h3>Home</h3>
-                    <h3>Products</h3>
-                    <h3>Delivery</h3>
-                    <h3>About Us</h3>
-                </div>
-                <div class="social">
-                <h4>Find us on social media</h4>
-                    <div id="socialIcons">
-                        <img src="Twitter.svg">
-                        <img src="Insta.svg">
-                        <img src="Facebook.svg">
-                    </div>
-                </div>
-                <div class="copyright">
-                    <h4>© 2020 Red Lodge Farm. All rights reserved</h4>
-                </div>  
-            </div>
-
-        </footer>
-    <script src="script.js"></script>
-    <script src="jquery-3.5.1.js"></script>
-    </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="preconnect" href="https://fonts.gstatic.com"><link href="https://fonts.googleapis.com/css2?family=Lobster+Two:wght@400;700&display=swap" rel="stylesheet"><link rel="preconnect" href="https://fonts.gstatic.com"><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet"><link rel="manifest" href="/manifest.json"/><title>React App</title></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(e){function t(t){for(var n,i,a=t[0],c=t[1],l=t[2],s=0,p=[];s<a.length;s++)i=a[s],Object.prototype.hasOwnProperty.call(o,i)&&o[i]&&p.push(o[i][0]),o[i]=0;for(n in c)Object.prototype.hasOwnProperty.call(c,n)&&(e[n]=c[n]);for(f&&f(t);p.length;)p.shift()();return u.push.apply(u,l||[]),r()}function r(){for(var e,t=0;t<u.length;t++){for(var r=u[t],n=!0,a=1;a<r.length;a++){var c=r[a];0!==o[c]&&(n=!1)}n&&(u.splice(t--,1),e=i(i.s=r[0]))}return e}var n={},o={1:0},u=[];function i(t){if(n[t])return n[t].exports;var r=n[t]={i:t,l:!1,exports:{}};return e[t].call(r.exports,r,r.exports,i),r.l=!0,r.exports}i.e=function(e){var t=[],r=o[e];if(0!==r)if(r)t.push(r[2]);else{var n=new Promise((function(t,n){r=o[e]=[t,n]}));t.push(r[2]=n);var u,a=document.createElement("script");a.charset="utf-8",a.timeout=120,i.nc&&a.setAttribute("nonce",i.nc),a.src=function(e){return i.p+"static/js/"+({}[e]||e)+"."+{3:"f5d83390"}[e]+".chunk.js"}(e);var c=new Error;u=function(t){a.onerror=a.onload=null,clearTimeout(l);var r=o[e];if(0!==r){if(r){var n=t&&("load"===t.type?"missing":t.type),u=t&&t.target&&t.target.src;c.message="Loading chunk "+e+" failed.\n("+n+": "+u+")",c.name="ChunkLoadError",c.type=n,c.request=u,r[1](c)}o[e]=void 0}};var l=setTimeout((function(){u({type:"timeout",target:a})}),12e4);a.onerror=a.onload=u,document.head.appendChild(a)}return Promise.all(t)},i.m=e,i.c=n,i.d=function(e,t,r){i.o(e,t)||Object.defineProperty(e,t,{enumerable:!0,get:r})},i.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},i.t=function(e,t){if(1&t&&(e=i(e)),8&t)return e;if(4&t&&"object"==typeof e&&e&&e.__esModule)return e;var r=Object.create(null);if(i.r(r),Object.defineProperty(r,"default",{enumerable:!0,value:e}),2&t&&"string"!=typeof e)for(var n in e)i.d(r,n,function(t){return e[t]}.bind(null,n));return r},i.n=function(e){var t=e&&e.__esModule?function(){return e.default}:function(){return e};return i.d(t,"a",t),t},i.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},i.p="/",i.oe=function(e){throw console.error(e),e};var a=this.webpackJsonpportfoliowebste=this.webpackJsonpportfoliowebste||[],c=a.push.bind(a);a.push=t,a=a.slice();for(var l=0;l<a.length;l++)t(a[l]);var f=c;r()}([])</script><script src="/static/js/2.764642df.chunk.js"></script><script src="/static/js/main.c9d4c166.chunk.js"></script></body></html>
